parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANY
    DOLLAR
    FUNCTIONADD
    FUNCTIONCHARAT
    FUNCTIONCONCAT
    FUNCTIONFILTER
    FUNCTIONHAS
    FUNCTIONJOIN
    FUNCTIONSPLIT
    IN
    INSTANCEOF
    LCOMILLA
    MOD
    PRINT
    RCOMILLA
    SPECIAL
    TYPEOF
    VAROBJECT

Grammar

Rule 0     S' -> statement
Rule 1     statement -> statement_value
Rule 2     statement -> statement_value POINTCOMMA
Rule 3     statement_value -> expression
Rule 4     statement_value -> concatenate
Rule 5     statement_value -> declare
Rule 6     statement_value -> assign
Rule 7     statement_value -> expCond
Rule 8     statement_value -> expOpLog
Rule 9     statement_value -> expNeg
Rule 10    statement_value -> expEq
Rule 11    statement_value -> expNotEq
Rule 12    statement_value -> exp_set
Rule 13    statement_value -> statement_control
Rule 14    statement_value -> comments
Rule 15    statement_control -> funcionif
Rule 16    statement_control -> funcionwhile
Rule 17    statement_control -> funcionfor
Rule 18    comments -> COMMENT
Rule 19    comments -> MULTICOMMENT
Rule 20    declare -> var_boolean
Rule 21    declare -> var_number
Rule 22    declare -> var_string
Rule 23    declare -> var_enum
Rule 24    declare -> var_null
Rule 25    declare -> var_undefined
Rule 26    declare -> declare_array
Rule 27    declare -> declare_enum
Rule 28    declare -> declare_generic
Rule 29    declare_enum -> ENUM OBJECTNAME LKEY enums RKEY
Rule 30    enums -> enums_numeric
Rule 31    enums -> enums_string
Rule 32    enums_numeric -> enums_numeric COMMA enums_numeric_value
Rule 33    enums_numeric -> enums_numeric_value
Rule 34    enums_numeric_value -> object_name EQUAL number
Rule 35    enums_numeric_value -> object_name
Rule 36    enums_string -> enums_string COMMA enums_string_value
Rule 37    enums_string -> enums_string_value
Rule 38    enums_string_value -> object_name EQUAL string
Rule 39    funcionif -> IF LPAREN formLog RPAREN substatement
Rule 40    funcionif -> IF LPAREN formLog RPAREN substatement funcionelif
Rule 41    funcionif -> IF LPAREN formLog RPAREN substatement funcionelif funcionelse
Rule 42    funcionif -> IF LPAREN formLog RPAREN substatement funcionelse
Rule 43    funcionelif -> ELIF LPAREN formLog RPAREN substatement
Rule 44    funcionelif -> ELIF LPAREN formLog RPAREN substatement funcionelif
Rule 45    funcionelse -> ELSE substatement
Rule 46    funcionfor -> FOR LPAREN declare_any EQUAL number_value POINTCOMMA formLog POINTCOMMA VARIABLE operador RPAREN substatement
Rule 47    funcionfor -> FOR LPAREN VARIABLE EQUAL number_value POINTCOMMA formLog POINTCOMMA VARIABLE operador RPAREN substatement
Rule 48    funcionwhile -> WHILE LPAREN formLog RPAREN substatement
Rule 49    substatement -> LKEY statement RKEY
Rule 50    substatement -> LKEY RKEY
Rule 51    exp_set -> declare_any EQUAL NEW SET LPAREN RPAREN
Rule 52    declare_array -> declare_array_main_number
Rule 53    declare_array -> declare_array_main_boolean
Rule 54    declare_array -> declare_array_main_string
Rule 55    declare_array -> declare_generic_array
Rule 56    declare_array_main_number -> declare_array_number EQUAL list_number
Rule 57    declare_array_main_number -> declare_array_number
Rule 58    declare_array_number -> declare_number LBRACKET RBRACKET
Rule 59    declare_array_number -> declare_any TWOPOINTS ARRAY LESS VARNUMBER GREATER
Rule 60    declare_array_main_boolean -> declare_array_boolean EQUAL list_boolean
Rule 61    declare_array_main_boolean -> declare_array_boolean
Rule 62    declare_array_boolean -> declare_boolean LBRACKET RBRACKET
Rule 63    declare_array_boolean -> declare_any TWOPOINTS ARRAY LESS VARBOOLEAN GREATER
Rule 64    declare_array_main_string -> declare_array_string EQUAL list_string
Rule 65    declare_array_main_string -> declare_array_string
Rule 66    declare_array_string -> declare_string LBRACKET RBRACKET
Rule 67    declare_array_string -> declare_any TWOPOINTS ARRAY LESS VARSTRING GREATER
Rule 68    declare_generic_array -> declare_any EQUAL list_types
Rule 69    var_null -> declare_any EQUAL NULL
Rule 70    var_undefined -> declare_any EQUAL UNDEFINED
Rule 71    var_number -> declare_number EQUAL number_value
Rule 72    var_number -> declare_number EQUAL funcionmath
Rule 73    var_number -> declare_number
Rule 74    declare_number -> declare_any TWOPOINTS VARNUMBER
Rule 75    var_boolean -> declare_boolean EQUAL boolean_value
Rule 76    var_boolean -> declare_boolean
Rule 77    declare_boolean -> declare_any TWOPOINTS VARBOOLEAN
Rule 78    var_string -> declare_string EQUAL string_value
Rule 79    var_string -> declare_string
Rule 80    declare_string -> declare_any TWOPOINTS VARSTRING
Rule 81    var_enum -> declare_var_enum EQUAL enum_value
Rule 82    var_enum -> declare_var_enum
Rule 83    declare_var_enum -> declare_any TWOPOINTS object_name
Rule 84    declare_generic -> declare_any EQUAL assign_value
Rule 85    declare_generic -> declare_any
Rule 86    declare_any -> prefix VARIABLE
Rule 87    assign -> assign_variable
Rule 88    assign -> assign_array
Rule 89    assign -> assign_object_value
Rule 90    assign_variable -> variable EQUAL assign_value
Rule 91    assign_variable -> variable EQUAL list_types
Rule 92    assign_array -> array_value EQUAL general_value
Rule 93    assign_object_value -> object_value_form1 EQUAL general_value
Rule 94    assign_object_value -> object_value_form1 EQUAL list_types
Rule 95    assign_object_value -> object_value_form2 EQUAL general_value
Rule 96    assign_value -> general_value
Rule 97    assign_value -> object_definition
Rule 98    object_definition -> LKEY attributes RKEY
Rule 99    attributes -> attributes COMMA attribute
Rule 100   attributes -> attribute
Rule 101   attribute -> variable TWOPOINTS general_value
Rule 102   attribute -> variable TWOPOINTS list_types
Rule 103   general_value -> expression
Rule 104   general_value -> boolean
Rule 105   general_value -> string
Rule 106   general_value -> expCond
Rule 107   general_value -> expOpLog
Rule 108   general_value -> expNeg
Rule 109   general_value -> expEq
Rule 110   general_value -> expNotEq
Rule 111   list_types -> list_number
Rule 112   list_types -> list_boolean
Rule 113   list_types -> list_string
Rule 114   list_number -> LBRACKET numbers RBRACKET
Rule 115   numbers -> numbers COMMA number_value
Rule 116   numbers -> number_value
Rule 117   list_boolean -> LBRACKET booleans RBRACKET
Rule 118   booleans -> booleans COMMA boolean_value
Rule 119   booleans -> boolean_value
Rule 120   list_string -> LBRACKET strings RBRACKET
Rule 121   strings -> strings COMMA string_value
Rule 122   strings -> string_value
Rule 123   number_value -> expression
Rule 124   boolean_value -> boolean
Rule 125   boolean_value -> other_value
Rule 126   boolean_value -> expCond
Rule 127   boolean_value -> expOpLog
Rule 128   boolean_value -> expNeg
Rule 129   boolean_value -> expEq
Rule 130   boolean_value -> expNotEq
Rule 131   string_value -> string
Rule 132   string_value -> other_value
Rule 133   concatenate -> termS
Rule 134   termS -> string PLUS chain
Rule 135   chain -> termS PLUS value
Rule 136   chain -> value
Rule 137   value -> expression
Rule 138   value -> string
Rule 139   expression -> expression PLUS term
Rule 140   expression -> expression MINUS term
Rule 141   expression -> term
Rule 142   term -> term PRODUCT term
Rule 143   term -> term DIVIDE term
Rule 144   term -> term1 INCREMENT
Rule 145   term -> INCREMENT term1
Rule 146   term -> term1 DECREMENT
Rule 147   term -> DECREMENT term1
Rule 148   expNeg -> NEGATION expOpLog
Rule 149   expNeg -> NEGATION factor_exprlog
Rule 150   expNeg -> NEGATION boolean
Rule 151   expNeg -> NEGATION LPAREN expOpLog RPAREN
Rule 152   expEq -> expCond EQUALTO expCond
Rule 153   expEq -> factor_exprlog EQUALTO factor_exprlog
Rule 154   expEq -> expression EQUALTO expression
Rule 155   expNotEq -> expCond NOTEQUALTO expCond
Rule 156   expNotEq -> factor_exprlog NOTEQUALTO factor_exprlog
Rule 157   expNotEq -> expression NOTEQUALTO expression
Rule 158   expOpLog -> expCond oplogico expCond
Rule 159   expOpLog -> factor_exprlog oplogico factor_exprlog
Rule 160   expOpLog -> expression oplogico expression
Rule 161   factor_exprlog -> LPAREN expCond RPAREN
Rule 162   expCond -> expression operador expression
Rule 163   expCond -> LPAREN expression operador expression RPAREN
Rule 164   term1 -> LPAREN group RPAREN
Rule 165   term1 -> group
Rule 166   group -> number
Rule 167   group -> variable
Rule 168   group -> array_value
Rule 169   group -> object_value
Rule 170   term -> number
Rule 171   term -> factor_expr
Rule 172   term -> other_value
Rule 173   factor_expr -> LPAREN expression RPAREN
Rule 174   other_value -> variable
Rule 175   other_value -> array_value
Rule 176   other_value -> enum_value
Rule 177   other_value -> object_value
Rule 178   formLog -> expCond
Rule 179   formLog -> expOpLog
Rule 180   object_value -> object_value_form1
Rule 181   object_value -> object_value_form2
Rule 182   object_value_form1 -> variable POINT variable
Rule 183   object_value_form2 -> variable POINT array_value
Rule 184   array_value -> variable LBRACKET expression RBRACKET
Rule 185   enum_value -> object_name POINT object_name
Rule 186   prefix -> LET
Rule 187   prefix -> VAR
Rule 188   prefix -> STATIC
Rule 189   prefix -> CONST
Rule 190   typedate -> VARNUMBER
Rule 191   typedate -> VARSTRING
Rule 192   typedate -> VARBOOLEAN
Rule 193   typedate -> ENUM
Rule 194   number -> NUMBER
Rule 195   number -> FLOAT
Rule 196   string -> NORMSTRING1
Rule 197   string -> NORMSTRING2
Rule 198   string -> MULTISTRING
Rule 199   boolean -> TRUE
Rule 200   boolean -> FALSE
Rule 201   variable -> VARIABLE
Rule 202   object_name -> OBJECTNAME
Rule 203   operador -> GREATER
Rule 204   operador -> LESS
Rule 205   operador -> GREATEREQUAL
Rule 206   operador -> LESSEQUAL
Rule 207   operador -> EQUALTO
Rule 208   operador -> NOTEQUALTO
Rule 209   oplogico -> AND
Rule 210   oplogico -> OR
Rule 211   funcionmath -> mathAbs
Rule 212   funcionmath -> mathRound
Rule 213   funcionmath -> mathPow
Rule 214   mathAbs -> FUNMATH POINT ABS LPAREN VARIABLE RPAREN
Rule 215   mathAbs -> FUNMATH POINT ABS LPAREN number_value RPAREN
Rule 216   mathRound -> FUNMATH POINT ROUND LPAREN VARIABLE RPAREN
Rule 217   mathRound -> FUNMATH POINT ROUND LPAREN number_value RPAREN
Rule 218   mathPow -> FUNMATH POINT POW LPAREN VARIABLE COMMA VARIABLE RPAREN
Rule 219   mathPow -> FUNMATH POINT POW LPAREN number_value COMMA number_value RPAREN
Rule 220   mathPow -> FUNMATH POINT POW LPAREN VARIABLE COMMA number_value RPAREN
Rule 221   mathPow -> FUNMATH POINT POW LPAREN number_value COMMA VARIABLE RPAREN

Terminals, with rules where they appear

ABS                  : 214 215
AND                  : 209
ANY                  : 
ARRAY                : 59 63 67
COMMA                : 32 36 99 115 118 121 218 219 220 221
COMMENT              : 18
CONST                : 189
DECREMENT            : 146 147
DIVIDE               : 143
DOLLAR               : 
ELIF                 : 43 44
ELSE                 : 45
ENUM                 : 29 193
EQUAL                : 34 38 46 47 51 56 60 64 68 69 70 71 72 75 78 81 84 90 91 92 93 94 95
EQUALTO              : 152 153 154 207
FALSE                : 200
FLOAT                : 195
FOR                  : 46 47
FUNCTIONADD          : 
FUNCTIONCHARAT       : 
FUNCTIONCONCAT       : 
FUNCTIONFILTER       : 
FUNCTIONHAS          : 
FUNCTIONJOIN         : 
FUNCTIONSPLIT        : 
FUNMATH              : 214 215 216 217 218 219 220 221
GREATER              : 59 63 67 203
GREATEREQUAL         : 205
IF                   : 39 40 41 42
IN                   : 
INCREMENT            : 144 145
INSTANCEOF           : 
LBRACKET             : 58 62 66 114 117 120 184
LCOMILLA             : 
LESS                 : 59 63 67 204
LESSEQUAL            : 206
LET                  : 186
LKEY                 : 29 49 50 98
LPAREN               : 39 40 41 42 43 44 46 47 48 51 151 161 163 164 173 214 215 216 217 218 219 220 221
MINUS                : 140
MOD                  : 
MULTICOMMENT         : 19
MULTISTRING          : 198
NEGATION             : 148 149 150 151
NEW                  : 51
NORMSTRING1          : 196
NORMSTRING2          : 197
NOTEQUALTO           : 155 156 157 208
NULL                 : 69
NUMBER               : 194
OBJECTNAME           : 29 202
OR                   : 210
PLUS                 : 134 135 139
POINT                : 182 183 185 214 215 216 217 218 219 220 221
POINTCOMMA           : 2 46 46 47 47
POW                  : 218 219 220 221
PRINT                : 
PRODUCT              : 142
RBRACKET             : 58 62 66 114 117 120 184
RCOMILLA             : 
RKEY                 : 29 49 50 98
ROUND                : 216 217
RPAREN               : 39 40 41 42 43 44 46 47 48 51 151 161 163 164 173 214 215 216 217 218 219 220 221
SET                  : 51
SPECIAL              : 
STATIC               : 188
TRUE                 : 199
TWOPOINTS            : 59 63 67 74 77 80 83 101 102
TYPEOF               : 
UNDEFINED            : 70
VAR                  : 187
VARBOOLEAN           : 63 77 192
VARIABLE             : 46 47 47 86 201 214 216 218 218 220 221
VARNUMBER            : 59 74 190
VAROBJECT            : 
VARSTRING            : 67 80 191
WHILE                : 48
error                : 

Nonterminals, with rules where they appear

array_value          : 92 168 175 183
assign               : 6
assign_array         : 88
assign_object_value  : 89
assign_value         : 84 90
assign_variable      : 87
attribute            : 99 100
attributes           : 98 99
boolean              : 104 124 150
boolean_value        : 75 118 119
booleans             : 117 118
chain                : 134
comments             : 14
concatenate          : 4
declare              : 5
declare_any          : 46 51 59 63 67 68 69 70 74 77 80 83 84 85
declare_array        : 26
declare_array_boolean : 60 61
declare_array_main_boolean : 53
declare_array_main_number : 52
declare_array_main_string : 54
declare_array_number : 56 57
declare_array_string : 64 65
declare_boolean      : 62 75 76
declare_enum         : 27
declare_generic      : 28
declare_generic_array : 55
declare_number       : 58 71 72 73
declare_string       : 66 78 79
declare_var_enum     : 81 82
enum_value           : 81 176
enums                : 29
enums_numeric        : 30 32
enums_numeric_value  : 32 33
enums_string         : 31 36
enums_string_value   : 36 37
expCond              : 7 106 126 152 152 155 155 158 158 161 178
expEq                : 10 109 129
expNeg               : 9 108 128
expNotEq             : 11 110 130
expOpLog             : 8 107 127 148 151 179
exp_set              : 12
expression           : 3 103 123 137 139 140 154 154 157 157 160 160 162 162 163 163 173 184
factor_expr          : 171
factor_exprlog       : 149 153 153 156 156 159 159
formLog              : 39 40 41 42 43 44 46 47 48
funcionelif          : 40 41 44
funcionelse          : 41 42
funcionfor           : 17
funcionif            : 15
funcionmath          : 72
funcionwhile         : 16
general_value        : 92 93 95 96 101
group                : 164 165
list_boolean         : 60 112
list_number          : 56 111
list_string          : 64 113
list_types           : 68 91 94 102
mathAbs              : 211
mathPow              : 213
mathRound            : 212
number               : 34 166 170
number_value         : 46 47 71 115 116 215 217 219 219 220 221
numbers              : 114 115
object_definition    : 97
object_name          : 34 35 38 83 185 185
object_value         : 169 177
object_value_form1   : 93 94 180
object_value_form2   : 95 181
operador             : 46 47 162 163
oplogico             : 158 159 160
other_value          : 125 132 172
prefix               : 86
statement            : 49 0
statement_control    : 13
statement_value      : 1 2
string               : 38 105 131 134 138
string_value         : 78 121 122
strings              : 120 121
substatement         : 39 40 41 42 43 44 45 46 47 48
term                 : 139 140 141 142 142 143 143
term1                : 144 145 146 147
termS                : 133 135
typedate             : 
value                : 135 136
var_boolean          : 20
var_enum             : 23
var_null             : 24
var_number           : 21
var_string           : 22
var_undefined        : 25
variable             : 90 91 101 102 167 174 182 182 183 184

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . statement_value
    (2) statement -> . statement_value POINTCOMMA
    (3) statement_value -> . expression
    (4) statement_value -> . concatenate
    (5) statement_value -> . declare
    (6) statement_value -> . assign
    (7) statement_value -> . expCond
    (8) statement_value -> . expOpLog
    (9) statement_value -> . expNeg
    (10) statement_value -> . expEq
    (11) statement_value -> . expNotEq
    (12) statement_value -> . exp_set
    (13) statement_value -> . statement_control
    (14) statement_value -> . comments
    (139) expression -> . expression PLUS term
    (140) expression -> . expression MINUS term
    (141) expression -> . term
    (133) concatenate -> . termS
    (20) declare -> . var_boolean
    (21) declare -> . var_number
    (22) declare -> . var_string
    (23) declare -> . var_enum
    (24) declare -> . var_null
    (25) declare -> . var_undefined
    (26) declare -> . declare_array
    (27) declare -> . declare_enum
    (28) declare -> . declare_generic
    (87) assign -> . assign_variable
    (88) assign -> . assign_array
    (89) assign -> . assign_object_value
    (162) expCond -> . expression operador expression
    (163) expCond -> . LPAREN expression operador expression RPAREN
    (158) expOpLog -> . expCond oplogico expCond
    (159) expOpLog -> . factor_exprlog oplogico factor_exprlog
    (160) expOpLog -> . expression oplogico expression
    (148) expNeg -> . NEGATION expOpLog
    (149) expNeg -> . NEGATION factor_exprlog
    (150) expNeg -> . NEGATION boolean
    (151) expNeg -> . NEGATION LPAREN expOpLog RPAREN
    (152) expEq -> . expCond EQUALTO expCond
    (153) expEq -> . factor_exprlog EQUALTO factor_exprlog
    (154) expEq -> . expression EQUALTO expression
    (155) expNotEq -> . expCond NOTEQUALTO expCond
    (156) expNotEq -> . factor_exprlog NOTEQUALTO factor_exprlog
    (157) expNotEq -> . expression NOTEQUALTO expression
    (51) exp_set -> . declare_any EQUAL NEW SET LPAREN RPAREN
    (15) statement_control -> . funcionif
    (16) statement_control -> . funcionwhile
    (17) statement_control -> . funcionfor
    (18) comments -> . COMMENT
    (19) comments -> . MULTICOMMENT
    (142) term -> . term PRODUCT term
    (143) term -> . term DIVIDE term
    (144) term -> . term1 INCREMENT
    (145) term -> . INCREMENT term1
    (146) term -> . term1 DECREMENT
    (147) term -> . DECREMENT term1
    (170) term -> . number
    (171) term -> . factor_expr
    (172) term -> . other_value
    (134) termS -> . string PLUS chain
    (75) var_boolean -> . declare_boolean EQUAL boolean_value
    (76) var_boolean -> . declare_boolean
    (71) var_number -> . declare_number EQUAL number_value
    (72) var_number -> . declare_number EQUAL funcionmath
    (73) var_number -> . declare_number
    (78) var_string -> . declare_string EQUAL string_value
    (79) var_string -> . declare_string
    (81) var_enum -> . declare_var_enum EQUAL enum_value
    (82) var_enum -> . declare_var_enum
    (69) var_null -> . declare_any EQUAL NULL
    (70) var_undefined -> . declare_any EQUAL UNDEFINED
    (52) declare_array -> . declare_array_main_number
    (53) declare_array -> . declare_array_main_boolean
    (54) declare_array -> . declare_array_main_string
    (55) declare_array -> . declare_generic_array
    (29) declare_enum -> . ENUM OBJECTNAME LKEY enums RKEY
    (84) declare_generic -> . declare_any EQUAL assign_value
    (85) declare_generic -> . declare_any
    (90) assign_variable -> . variable EQUAL assign_value
    (91) assign_variable -> . variable EQUAL list_types
    (92) assign_array -> . array_value EQUAL general_value
    (93) assign_object_value -> . object_value_form1 EQUAL general_value
    (94) assign_object_value -> . object_value_form1 EQUAL list_types
    (95) assign_object_value -> . object_value_form2 EQUAL general_value
    (161) factor_exprlog -> . LPAREN expCond RPAREN
    (86) declare_any -> . prefix VARIABLE
    (39) funcionif -> . IF LPAREN formLog RPAREN substatement
    (40) funcionif -> . IF LPAREN formLog RPAREN substatement funcionelif
    (41) funcionif -> . IF LPAREN formLog RPAREN substatement funcionelif funcionelse
    (42) funcionif -> . IF LPAREN formLog RPAREN substatement funcionelse
    (48) funcionwhile -> . WHILE LPAREN formLog RPAREN substatement
    (46) funcionfor -> . FOR LPAREN declare_any EQUAL number_value POINTCOMMA formLog POINTCOMMA VARIABLE operador RPAREN substatement
    (47) funcionfor -> . FOR LPAREN VARIABLE EQUAL number_value POINTCOMMA formLog POINTCOMMA VARIABLE operador RPAREN substatement
    (164) term1 -> . LPAREN group RPAREN
    (165) term1 -> . group
    (194) number -> . NUMBER
    (195) number -> . FLOAT
    (173) factor_expr -> . LPAREN expression RPAREN
    (174) other_value -> . variable
    (175) other_value -> . array_value
    (176) other_value -> . enum_value
    (177) other_value -> . object_value
    (196) string -> . NORMSTRING1
    (197) string -> . NORMSTRING2
    (198) string -> . MULTISTRING
    (77) declare_boolean -> . declare_any TWOPOINTS VARBOOLEAN
    (74) declare_number -> . declare_any TWOPOINTS VARNUMBER
    (80) declare_string -> . declare_any TWOPOINTS VARSTRING
    (83) declare_var_enum -> . declare_any TWOPOINTS object_name
    (56) declare_array_main_number -> . declare_array_number EQUAL list_number
    (57) declare_array_main_number -> . declare_array_number
    (60) declare_array_main_boolean -> . declare_array_boolean EQUAL list_boolean
    (61) declare_array_main_boolean -> . declare_array_boolean
    (64) declare_array_main_string -> . declare_array_string EQUAL list_string
    (65) declare_array_main_string -> . declare_array_string
    (68) declare_generic_array -> . declare_any EQUAL list_types
    (201) variable -> . VARIABLE
    (184) array_value -> . variable LBRACKET expression RBRACKET
    (182) object_value_form1 -> . variable POINT variable
    (183) object_value_form2 -> . variable POINT array_value
    (186) prefix -> . LET
    (187) prefix -> . VAR
    (188) prefix -> . STATIC
    (189) prefix -> . CONST
    (166) group -> . number
    (167) group -> . variable
    (168) group -> . array_value
    (169) group -> . object_value
    (185) enum_value -> . object_name POINT object_name
    (180) object_value -> . object_value_form1
    (181) object_value -> . object_value_form2
    (58) declare_array_number -> . declare_number LBRACKET RBRACKET
    (59) declare_array_number -> . declare_any TWOPOINTS ARRAY LESS VARNUMBER GREATER
    (62) declare_array_boolean -> . declare_boolean LBRACKET RBRACKET
    (63) declare_array_boolean -> . declare_any TWOPOINTS ARRAY LESS VARBOOLEAN GREATER
    (66) declare_array_string -> . declare_string LBRACKET RBRACKET
    (67) declare_array_string -> . declare_any TWOPOINTS ARRAY LESS VARSTRING GREATER
    (202) object_name -> . OBJECTNAME

    LPAREN          shift and go to state 29
    NEGATION        shift and go to state 31
    COMMENT         shift and go to state 36
    MULTICOMMENT    shift and go to state 37
    INCREMENT       shift and go to state 39
    DECREMENT       shift and go to state 40
    ENUM            shift and go to state 54
    IF              shift and go to state 62
    WHILE           shift and go to state 63
    FOR             shift and go to state 64
    NUMBER          shift and go to state 66
    FLOAT           shift and go to state 67
    NORMSTRING1     shift and go to state 69
    NORMSTRING2     shift and go to state 70
    MULTISTRING     shift and go to state 71
    VARIABLE        shift and go to state 61
    LET             shift and go to state 76
    VAR             shift and go to state 77
    STATIC          shift and go to state 78
    CONST           shift and go to state 79
    OBJECTNAME      shift and go to state 55

    statement                      shift and go to state 1
    statement_value                shift and go to state 2
    expression                     shift and go to state 3
    concatenate                    shift and go to state 4
    declare                        shift and go to state 5
    assign                         shift and go to state 6
    expCond                        shift and go to state 7
    expOpLog                       shift and go to state 8
    expNeg                         shift and go to state 9
    expEq                          shift and go to state 10
    expNotEq                       shift and go to state 11
    exp_set                        shift and go to state 12
    statement_control              shift and go to state 13
    comments                       shift and go to state 14
    term                           shift and go to state 15
    termS                          shift and go to state 16
    var_boolean                    shift and go to state 17
    var_number                     shift and go to state 18
    var_string                     shift and go to state 19
    var_enum                       shift and go to state 20
    var_null                       shift and go to state 21
    var_undefined                  shift and go to state 22
    declare_array                  shift and go to state 23
    declare_enum                   shift and go to state 24
    declare_generic                shift and go to state 25
    assign_variable                shift and go to state 26
    assign_array                   shift and go to state 27
    assign_object_value            shift and go to state 28
    factor_exprlog                 shift and go to state 30
    declare_any                    shift and go to state 32
    funcionif                      shift and go to state 33
    funcionwhile                   shift and go to state 34
    funcionfor                     shift and go to state 35
    term1                          shift and go to state 38
    number                         shift and go to state 41
    factor_expr                    shift and go to state 42
    other_value                    shift and go to state 43
    string                         shift and go to state 44
    declare_boolean                shift and go to state 45
    declare_number                 shift and go to state 46
    declare_string                 shift and go to state 47
    declare_var_enum               shift and go to state 48
    enum_value                     shift and go to state 49
    declare_array_main_number      shift and go to state 50
    declare_array_main_boolean     shift and go to state 51
    declare_array_main_string      shift and go to state 52
    declare_generic_array          shift and go to state 53
    variable                       shift and go to state 56
    array_value                    shift and go to state 57
    object_value_form1             shift and go to state 58
    object_value_form2             shift and go to state 59
    prefix                         shift and go to state 60
    group                          shift and go to state 65
    object_value                   shift and go to state 68
    object_name                    shift and go to state 72
    declare_array_number           shift and go to state 73
    declare_array_boolean          shift and go to state 74
    declare_array_string           shift and go to state 75

state 1

    (0) S' -> statement .



state 2

    (1) statement -> statement_value .
    (2) statement -> statement_value . POINTCOMMA

    $end            reduce using rule 1 (statement -> statement_value .)
    RKEY            reduce using rule 1 (statement -> statement_value .)
    POINTCOMMA      shift and go to state 80


state 3

    (3) statement_value -> expression .
    (139) expression -> expression . PLUS term
    (140) expression -> expression . MINUS term
    (162) expCond -> expression . operador expression
    (160) expOpLog -> expression . oplogico expression
    (154) expEq -> expression . EQUALTO expression
    (157) expNotEq -> expression . NOTEQUALTO expression
    (203) operador -> . GREATER
    (204) operador -> . LESS
    (205) operador -> . GREATEREQUAL
    (206) operador -> . LESSEQUAL
    (207) operador -> . EQUALTO
    (208) operador -> . NOTEQUALTO
    (209) oplogico -> . AND
    (210) oplogico -> . OR

    POINTCOMMA      reduce using rule 3 (statement_value -> expression .)
    $end            reduce using rule 3 (statement_value -> expression .)
    RKEY            reduce using rule 3 (statement_value -> expression .)
    PLUS            shift and go to state 81
    MINUS           shift and go to state 82
    EQUALTO         shift and go to state 85
    NOTEQUALTO      shift and go to state 86
    GREATER         shift and go to state 87
    LESS            shift and go to state 88
    GREATEREQUAL    shift and go to state 89
    LESSEQUAL       shift and go to state 90
    AND             shift and go to state 91
    OR              shift and go to state 92

    operador                       shift and go to state 83
    oplogico                       shift and go to state 84

state 4

    (4) statement_value -> concatenate .

    POINTCOMMA      reduce using rule 4 (statement_value -> concatenate .)
    $end            reduce using rule 4 (statement_value -> concatenate .)
    RKEY            reduce using rule 4 (statement_value -> concatenate .)


state 5

    (5) statement_value -> declare .

    POINTCOMMA      reduce using rule 5 (statement_value -> declare .)
    $end            reduce using rule 5 (statement_value -> declare .)
    RKEY            reduce using rule 5 (statement_value -> declare .)


state 6

    (6) statement_value -> assign .

    POINTCOMMA      reduce using rule 6 (statement_value -> assign .)
    $end            reduce using rule 6 (statement_value -> assign .)
    RKEY            reduce using rule 6 (statement_value -> assign .)


state 7

    (7) statement_value -> expCond .
    (158) expOpLog -> expCond . oplogico expCond
    (152) expEq -> expCond . EQUALTO expCond
    (155) expNotEq -> expCond . NOTEQUALTO expCond
    (209) oplogico -> . AND
    (210) oplogico -> . OR

    POINTCOMMA      reduce using rule 7 (statement_value -> expCond .)
    $end            reduce using rule 7 (statement_value -> expCond .)
    RKEY            reduce using rule 7 (statement_value -> expCond .)
    EQUALTO         shift and go to state 94
    NOTEQUALTO      shift and go to state 95
    AND             shift and go to state 91
    OR              shift and go to state 92

    oplogico                       shift and go to state 93

state 8

    (8) statement_value -> expOpLog .

    POINTCOMMA      reduce using rule 8 (statement_value -> expOpLog .)
    $end            reduce using rule 8 (statement_value -> expOpLog .)
    RKEY            reduce using rule 8 (statement_value -> expOpLog .)


state 9

    (9) statement_value -> expNeg .

    POINTCOMMA      reduce using rule 9 (statement_value -> expNeg .)
    $end            reduce using rule 9 (statement_value -> expNeg .)
    RKEY            reduce using rule 9 (statement_value -> expNeg .)


state 10

    (10) statement_value -> expEq .

    POINTCOMMA      reduce using rule 10 (statement_value -> expEq .)
    $end            reduce using rule 10 (statement_value -> expEq .)
    RKEY            reduce using rule 10 (statement_value -> expEq .)


state 11

    (11) statement_value -> expNotEq .

    POINTCOMMA      reduce using rule 11 (statement_value -> expNotEq .)
    $end            reduce using rule 11 (statement_value -> expNotEq .)
    RKEY            reduce using rule 11 (statement_value -> expNotEq .)


state 12

    (12) statement_value -> exp_set .

    POINTCOMMA      reduce using rule 12 (statement_value -> exp_set .)
    $end            reduce using rule 12 (statement_value -> exp_set .)
    RKEY            reduce using rule 12 (statement_value -> exp_set .)


state 13

    (13) statement_value -> statement_control .

    POINTCOMMA      reduce using rule 13 (statement_value -> statement_control .)
    $end            reduce using rule 13 (statement_value -> statement_control .)
    RKEY            reduce using rule 13 (statement_value -> statement_control .)


state 14

    (14) statement_value -> comments .

    POINTCOMMA      reduce using rule 14 (statement_value -> comments .)
    $end            reduce using rule 14 (statement_value -> comments .)
    RKEY            reduce using rule 14 (statement_value -> comments .)


state 15

    (141) expression -> term .
    (142) term -> term . PRODUCT term
    (143) term -> term . DIVIDE term

    PLUS            reduce using rule 141 (expression -> term .)
    MINUS           reduce using rule 141 (expression -> term .)
    EQUALTO         reduce using rule 141 (expression -> term .)
    NOTEQUALTO      reduce using rule 141 (expression -> term .)
    GREATER         reduce using rule 141 (expression -> term .)
    LESS            reduce using rule 141 (expression -> term .)
    GREATEREQUAL    reduce using rule 141 (expression -> term .)
    LESSEQUAL       reduce using rule 141 (expression -> term .)
    AND             reduce using rule 141 (expression -> term .)
    OR              reduce using rule 141 (expression -> term .)
    POINTCOMMA      reduce using rule 141 (expression -> term .)
    $end            reduce using rule 141 (expression -> term .)
    RPAREN          reduce using rule 141 (expression -> term .)
    RKEY            reduce using rule 141 (expression -> term .)
    RBRACKET        reduce using rule 141 (expression -> term .)
    COMMA           reduce using rule 141 (expression -> term .)
    PRODUCT         shift and go to state 96
    DIVIDE          shift and go to state 97


state 16

    (133) concatenate -> termS .

    POINTCOMMA      reduce using rule 133 (concatenate -> termS .)
    $end            reduce using rule 133 (concatenate -> termS .)
    RKEY            reduce using rule 133 (concatenate -> termS .)


state 17

    (20) declare -> var_boolean .

    POINTCOMMA      reduce using rule 20 (declare -> var_boolean .)
    $end            reduce using rule 20 (declare -> var_boolean .)
    RKEY            reduce using rule 20 (declare -> var_boolean .)


state 18

    (21) declare -> var_number .

    POINTCOMMA      reduce using rule 21 (declare -> var_number .)
    $end            reduce using rule 21 (declare -> var_number .)
    RKEY            reduce using rule 21 (declare -> var_number .)


state 19

    (22) declare -> var_string .

    POINTCOMMA      reduce using rule 22 (declare -> var_string .)
    $end            reduce using rule 22 (declare -> var_string .)
    RKEY            reduce using rule 22 (declare -> var_string .)


state 20

    (23) declare -> var_enum .

    POINTCOMMA      reduce using rule 23 (declare -> var_enum .)
    $end            reduce using rule 23 (declare -> var_enum .)
    RKEY            reduce using rule 23 (declare -> var_enum .)


state 21

    (24) declare -> var_null .

    POINTCOMMA      reduce using rule 24 (declare -> var_null .)
    $end            reduce using rule 24 (declare -> var_null .)
    RKEY            reduce using rule 24 (declare -> var_null .)


state 22
